web/static/css/home.css
.hero {
    margin-block: var(--space-16);
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.recipe-grid {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    margin-inline: auto;

    --col-gap: var(--padding-inline-page);
    --row-gap: calc(var(--col-gap) * 1.5);
    column-gap: var(--col-gap);
    row-gap: var(--row-gap);
    padding: var(--padding-inline-page);
}

.recipe-card {
    display: block;
    text-decoration: none;
    color: inherit;
    --radius: 1rem;
    display: flex;
    flex-direction: column;
}

.recipe-card__img {
    width: 100%;
    aspect-ratio: 1 / 1;
    object-fit: cover;
    border-radius: var(--radius);
}

.recipe-card__content {
    flex-grow: 1;
}

.recipe-card__meta {
    display: flex;
    align-items: center;
    column-gap: var(--space-4);
    justify-content: space-between;
    margin-top: var(--space-2);
}

.recipe-card__meta-left {
    display: flex;
    column-gap: var(--space-4);
    flex-wrap: wrap;
}

.recipe-card__time {
    display: flex;
    align-items: center;
    column-gap: var(--space-1);
}

.recipe-card__meta-text {
    font-size: var(--text-sm);
}

.recipe-card__stars-container {
    font-size: 1rem;
}

.recipe-card__leaf {
    color: hsl(140 50% 35%);
    display: inline-block;
    vertical-align: center;
    --size: 1em;
}

.recipe-card__title {
    hyphens: auto;
    margin-top: var(--space-1);
    line-height: 1.25;
    letter-spacing: -0.02em;
    font-weight: 600;
}

@media (min-width: 480px) {
    .recipe-grid {
        --min-col-width: 12.75rem;
        grid-template-columns: repeat(auto-fill, minmax(var(--min-col-width), 1fr));
        --col-gap: var(--space-6);
    }
}

@media (min-width: 768px) {
    .recipe-grid {
        --min-col-width: 14rem;
        --col-gap: var(--space-8);
    }
}

